# agent-eval-harness

./: .env.example  .gitignore  README.md  cli.py  main.py  pyproject.toml
corpus/: audit.json  select_subset.py  swe_bench_verified_subset.jsonl
dashboard/: README.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/audit/: page.tsx
dashboard/app/task/[id]/: page.tsx
dashboard/components/: collapsible-pre.tsx  collapsible-text.tsx  diff.tsx  trace.tsx
dashboard/lib/: data.ts  format.ts
dashboard/public/: data.json
dashboard/scripts/: build_data.py
harness/: __init__.py  agent.py  audit.py  executor.py  runner.py  scorer.py  swebench.py  testspec.py  tools.py  trace.py
tasks/factorial/: buggy.py  task.json  test_buggy.py
tasks/factorial/tests/: test_buggy.py
